<resources>
    <string name="about_authors">Authors</string>
    <string name="about_change_log">Change Log</string>
    <string name="about_donors">Donors</string>
    <string name="about_panel">About XMPPremote</string>
    <string name="about_website">Website</string>
    <string name="about_name">CourseWork Project</string>
    <string name="about_department">Applied Mathemtic Department</string>
    <string name="chat_addresses">Addresses</string>
    <string name="chat_alias_add_by_name">Added alias \'%1$s\' for %2$s with number %3$s.</string>
    <string name="chat_alias_add_by_number">Added alias \'%1$s\' with number %2$s.</string>
    <string name="chat_alias_del_fail">Deletion of \'%1$s\' failed.</string>
    <string name="chat_alias_del_suc">Deleted alias \'%1$s\' successfully.</string>
    <string name="chat_alias_empty">No aliases set.</string>
    <string name="chat_alias_invalid_char">Alias name can not contain a single quote ("'").</string>
    <string name="chat_alias_show_non_existent">Alias \'%1$s\' does not exists.</string>
    <string name="chat_battery_level">Battery level %d%%</string>
    <string name="chat_bt_adapter_error">Error on Bluetooth adapter</string>
    <string name="chat_bt_adapter_state">Bluetooth adapter is %1$s</string>
    <string name="chat_bt_command_error">Unknown argument \"%1$s\" for command \"%2$s\"</string>
    <string name="chat_bt_shutdown">Bluetooth adapter shutdown has begun</string>
    <string name="chat_bt_startup">Bluetooth adapter startup has begun</string>
    <string name="chat_bt_state_off">off</string>
    <string name="chat_bt_state_on">on</string>
    <string name="chat_bt_state_turning_off">turning off</string>
    <string name="chat_bt_state_turning_on">turning on</string>
    <string name="chat_call_duration">&#xA0;of&#xA0;</string>
    <string name="chat_call_hidden">[hidden number]</string>
    <string name="chat_call_incoming">Incoming</string>
    <string name="chat_call_missed">Missed</string>
    <string name="chat_call_outgoing">Outgoing</string>
    <string name="chat_call_unknown">Unknown</string>
    <string name="chat_camera_back"> - Back camera</string>
    <string name="chat_camera_back_activated">Back camera activated</string>
    <string name="chat_camera_error_picture">Error while getting picture: %1$s</string>
    <string name="chat_camera_error_version">Your Android version doesn\'t allow this command.</string>
    <string name="chat_camera_front"> - Front camera</string>
    <string name="chat_camera_front_activated">Front camera activated</string>
    <string name="chat_choose_activity">XMPPremote: choose an activity</string>
    <string name="chat_clipboard">GPhone clipboard: %s</string>
    <string name="chat_command_disabled">This command has been disabled.</string>
    <string name="chat_contact_found">%1$d contacts found for \"%2$s\"</string>
    <string name="chat_del_sms_error">Can\'t delete SMS.</string>
    <string name="chat_del_sms_from">Deleting SMS from %s.</string>
    <string name="chat_del_sms_nb">%d SMS deleted.</string>
    <string name="chat_del_sms_syntax">Syntax is:\ndelsms:contact:[contact]\ndelsms:number:[number]\ndelsms:sent\ndelsms:last\ndelsms:lastin\ndelsms:lastout\ndelsms:all</string>
    <string name="chat_dial">Dial %s</string>
    <string name="chat_emails">Emails</string>
    <string name="chat_error">Error: %s</string>
    <string name="chat_error_clipboard">Clipboard access failed</string>
    <string name="chat_error_dial">Error can\'t dial.</string>
    <string name="chat_error_more_arguments">Command \"%1$s\" needs more arguments</string>
    <string name="chat_error_no_recipient">Reply contact is not set.</string>
    <string name="chat_error_ringing">Unable to ring. Check if ringtone is not set to silent and accessible or that the alarm volume is set.</string>
    <string name="chat_error_root">Can\'t have root access!</string>
    <string name="chat_error_unknown_cmd">\'%s\': unknown command. Send \"?\" for help.</string>
    <string name="chat_error_unkown_name">Contact name is not known or not distinct</string>
    <string name="chat_file_error">File \'%1$s\' doesn\'t exist!</string>
    <string name="chat_file_sending">Sending you: %1$s to: %2$s</string>
    <string name="chat_file_transfer_dir">Directories within %1$s</string>
    <string name="chat_file_transfer_error">Cannot send the file because an error occurred during the process: %1$s</string>
    <string name="chat_file_transfer_error_msg">File Transfer Error</string>
    <string name="chat_file_transfer_error_stream">Negotiating stream failed</string>
    <string name="chat_file_transfer_file">File transfer: %1$s - %2$s</string>
    <string name="chat_file_transfer_files">Files within %1$s</string>
    <string name="chat_file_transfer_file_already_exists">The file %1$s already exists</string>
    <string name="chat_file_transfer_file_complete">File transfer complete. File saved as %1$s</string>
    <string name="chat_file_transfer_file_not_mount">External Media not mounted read/write</string>
    <string name="chat_file_transfer_file_rejected">File transfer from %1$s rejected.</string>
    <string name="chat_file_transfer_not_dir">%1$s is not a directory</string>
    <string name="chat_file_transfer_no_file">No file in %1$s</string>
    <string name="chat_file_transfer_refused">Could not send the file. Refused by peer.</string>
    <string name="chat_file_transfer_started">File transfer starting: %1$s - %2$d KB</string>
    <string name="chat_geo_accuracy">accuracy: %fm&#xA0;</string>
    <string name="chat_geo_altitude">altitude: %f&#xA0;</string>
    <string name="chat_geo_provider">provider: %s</string>
    <string name="chat_geo_speed">speed: %fm/s&#xA0;</string>
    <string name="chat_help_alias_add">Adds or updates an alias for a given contact or number.</string>
    <string name="chat_help_alias_del">Deletes the specified alias.</string>
    <string name="chat_help_alias_general">Allows the creation/manipulation of permanent aliases, that can be use anywhere within XMPPremote where otherwise a number of full name would be required</string>
    <string name="chat_help_alias_show">Shows the alias information. If #aliasname# is \"all\", every known alias will be presented.</string>
    <string name="chat_help_battery">show battery level in percent.</string>
    <string name="chat_help_bt_off">turn off the bluetooth adapter.</string>
    <string name="chat_help_bt_on">turn on the bluetooth adapter.</string>
    <string name="chat_help_bt_state">give the current state of the bluetooth adapter.</string>
    <string name="chat_help_calls">display call log. The number argument is optional</string>
    <string name="chat_help_camera">take a photo and store it in the picture directory.</string>
    <string name="chat_help_camera_email">take a photo, store it and send it by email.</string>
    <string name="chat_help_camera_list">list all camera.</string>
    <string name="chat_help_camera_set">set the default camera to take photo.</string>
    <string name="chat_help_camera_xmpp">take a photo, store it and send it through xmpp connection.</string>
    <string name="chat_help_cmd">execute shell instruction with root access if possible.</string>
    <string name="chat_help_contact">display informations of a searched contact.</string>
    <string name="chat_help_copy">copy text to clipboard or sent phone clipboard if text is empty.</string>
    <string name="chat_help_del_sms_all">Delete all SMS without confirmation!</string>
    <string name="chat_help_del_sms_contact">Delete all SMS in the thread of the specified contact without confirmation!</string>
    <string name="chat_help_del_sms_last">Delete last [number] SMS, 1 by default.</string>
    <string name="chat_help_del_sms_sent">Delete all sent SMS without confirmation!</string>
    <string name="chat_help_dial">dial the specified contact.</string>
    <string name="chat_help_find_sms">search specific message in all SMS from searched contacts.</string>
    <string name="chat_help_find_sms_all">search specific message in all SMS.</string>
    <string name="chat_help_flash_off">turn flashlight off.</string>
    <string name="chat_help_flash_on">turn flashlight on.</string>
    <string name="chat_help_geo">Open Maps or Navigation or Street view on specific address.</string>
    <string name="chat_help_help">shows this help.</string>
    <string name="chat_help_help_all">shows full help.</string>
    <string name="chat_help_help_categories">shows the help categories.</string>
    <string name="chat_help_ignore">ignore the incoming phone call</string>
    <string name="chat_help_ls">display the list of files and folders in the specified folder.</string>
    <string name="chat_help_mark_as_read">mark SMS as read for last recipient or given contact.</string>
    <string name="chat_help_reject">reject the incoming phone call</string>
    <string name="chat_help_ring">rings the phone until you send stop. Volume between 0 and 100, 0 to vibrate.</string>
    <string name="chat_help_ringmode">With mode=(normal|silent|vibrate) Set ringer mode. Shows the actual mode if no argument is given.</string>
    <string name="chat_help_sc">take a screenshot and store it in the picture directory.</string>
    <string name="chat_help_sc_email">take a screenshot, store it and send it by email.</string>
    <string name="chat_help_sc_xmpp">take a screenshot, store it and send it through xmpp connection.</string>
    <string name="chat_help_send">send the specified file through XMPP. Use an absolut path, otherwise the last listed directory will be prefixed</string>
    <string name="chat_help_shell">open a new chat as a shell.</string>
    <string name="chat_help_sms_chat">creates a new Chat with the contact and invites you to that chat. Leave contact empty to use last contact</string>
    <string name="chat_help_sms_reply">send a SMS to your last recipient with content message.</string>
    <string name="chat_help_sms_send">sends a SMS to number with content message.</string>
    <string name="chat_help_sms_show_all">display last sent SMS from every contact.</string>
    <string name="chat_help_sms_show_contact">display last sent SMS from searched contacts.</string>
    <string name="chat_help_sms_show_unread">display unread SMS from every contact.</string>
    <string name="chat_help_stop">quits the application on your phone.</string>
    <string name="chat_help_title">Available commands:</string>
    <string name="chat_help_urls">paste links and open it with the appropriate application.</string>
    <string name="chat_help_where">sends you Google Maps/OSM updates about the location of the phone until you send stop.</string>
    <string name="chat_help_wifi_disable">disable network with the given id</string>
    <string name="chat_help_wifi_enable">enable network with the given id</string>
    <string name="chat_help_wifi_list">list all configured networks</string>
    <string name="chat_help_wifi_off">turn off the WiFi adapter.</string>
    <string name="chat_help_wifi_on">turn on the WiFi adapter.</string>
    <string name="chat_help_wifi_state">give the current state of the Wifi adapter.</string>
    <string name="chat_help_write">write text as virtual keyboard (don\'t forget to activate keyboard in Android Preferences panel).</string>
    <string name="chat_is_calling">%s is calling…</string>
    <string name="pref_con">Connection settings</string>
    <string name="pref_con_cat">Connection settings</string>
    <string name="pref_con_login">Login</string>
    <string name="pref_con_notified_address">Address to notify</string>
    <string name="pref_con_notified_address_cat">Address to notify</string>
    <string name="pref_con_notified_address_help">Enter your GMail address or XMPP JID</string>
    <string name="pref_con_password">Password</string>
    <string name="pref_con_use_different_account">Use a different account</string>
</resources>