<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  android:title="@string/pref_con"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_con_notified_address_cat" 
        android:key="Recipient">
        <EditTextPreference
            android:key="notifiedAddress"
            android:defaultValue="your.login@gmail.com"
            android:inputType="textEmailAddress"
            android:title="@string/pref_con_notified_address"
            android:summary="@string/pref_con_notified_address_help"/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pref_con_cat" 
        android:key="ConnectionSettings">
        <CheckBoxPreference
            android:key="useDifferentAccount"
            android:defaultValue="false"
            android:title="@string/pref_con_use_different_account"/>
            <!-- android:summary="@string/pref_con_use_different_account_help" --> 
        <EditTextPreference
            android:key="login"
            android:defaultValue="your.login"
            android:dependency="useDifferentAccount"
            android:title="@string/pref_con_login"
            android:inputType="textEmailAddress"/>
        <!-- android:summary="@string/pref_con_login_help" -->
        <EditTextPreference
            android:key="password"
            android:title="@string/pref_con_password"
            android:password="true"/>
    </PreferenceCategory>    
</PreferenceScreen>
